compiler/testData/cli/jvm/nullabilityAnnotations.out
compiler/testData/cli/jvm/severalAnnotations.kt:2:11: error: null can not be a konstue of a non-null type String
    a.foo(null)
          ^
COMPILATION_ERROR
